--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,7 +1,7 @@
 /********************************
 *      ДОПОЛНИТЕЛЬНЫЕ СТИЛИ
 *********************************/
-@import "../../bower_components/normalize.css/normalize.css";
+//@import "../../bower_components/normalize.css/normalize.css";
 
 @import "partials/sprite";
 
