--- a/src/template/head.html
+++ b/src/template/head.html
@@ -10,7 +10,7 @@
     <link href="style.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/animations.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/css3-animate-it.js" type="text/javascript"></script>
     <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.tabslet.min.js"></script>
