--- a/src/template/head.html
+++ b/src/template/head.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Lair of Snakes - Sample Page</title>
+    <title>Title</title>
     <link rel="stylesheet" href="css/flexslider.css">
     <link href="style.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -56,6 +56,6 @@
                 </nav>
             </div><!--End menu-->
 
-            <h1>Типовая внутренняя страница</h1>
+            <h1>О нас</h1>
         </div>
     </div><!-- End header-->
