--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -58,6 +58,7 @@
 .right{
   float: right;
 }
+
 .both:after {
   clear: both;
   content: "";
@@ -135,14 +136,6 @@
    position: relative;
    min-height:114px;
    text-align: center;
-   hr{
-     width:30px;
-     height:4px;
-     background-color: #f8c300;
-     border: none;
-     text-align: center;
-     display: inline-block;
-   }
    &:after{
      clear: both;
      content: "";
@@ -152,15 +145,32 @@
      padding: 0;
    }
    &:last-child{
+     p{
+       &:after{
+         display: none;
+       }
+     }
      &:before{
        display: none;
      }
    }
  }
   p{
-    padding: 0 0 0 85px;
+    padding: 0 0 20px 85px;
     font-family: 'proxima_nova_ltsemibold';
     text-align: left;
+    position: relative;
+    min-height: 70px;
+    &:after{
+      content: '';
+      width:30px;
+      height:3px;
+      background-color: #f8c300;
+      display: inline-block;
+      position: absolute;
+      bottom:0;
+      left:50%;
+    }
   }
 }
 .list{
@@ -200,6 +210,121 @@
   text-align: center;
   padding:14px 0 0;
   height:36px;
+}
+
+.invest{
+    h2{
+      font-size: 36px;
+      border-bottom: 3px solid #f9c300;
+      padding: 15px 0;
+    }
+}
+.invest-text{
+  width:65%;
+  p{
+    line-height:24px;
+    padding-bottom: 25px;
+  }
+}
+.invest-img{
+  width:31.5%;
+  margin: 24px 0;
+  img{
+    width:100%;
+  }
+}
+.bg-one{
+  background: url('../images/snakes1.png') center center  no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+  height: 280px;
+  width:100%;
+  margin: 0 0 30px;
+}
+
+.text-center{
+  text-align: center;
+  font-size: 36px;
+  border-bottom: 3px solid #f9c300;
+  padding: 15px 0;
+  margin:0;
+}
+
+.b-list{
+  background: url('../images/b-list.png') 55% 60% no-repeat;
+  height: 556px;
+  margin:0 0 50px;
+  .left{
+    text-align: right;
+  }
+  .right{
+    text-align: left;
+  }
+  ul{
+    width:47%;
+    li{
+      line-height: 25px;
+      margin:62px 0;
+    }
+  }
+}
+.bg-toch{
+  background: url('../images/b-list-toch.png') 50% 0 no-repeat;
+  height:100%;
+}
+.text-centers{
+  text-align: center;
+}
+.b-snakes-two{
+  background: url('../images/snakes2.png') 0 0 no-repeat;
+  height: 314px;
+  padding:165px 0 0;
+  -webkit-background-size: cover;
+  background-size: cover;
+  p{
+    position: relative;
+    color: #FFFFFF;
+    text-align: justify;
+    font-size: 16px;
+    line-height: 25px;
+    span{
+      font-size: 20px;
+      font-weight: bold;
+    }
+    &:before{
+      content: '';
+      background: url('../images/cav-top.png') 0 0 no-repeat;
+      width: 17px;
+      height: 14px;
+      position: absolute;
+      top:-52px;
+      left:49%;
+    }
+    &:after{
+      content: '';
+      background: url('../images/cav-bootom.png') 0 0 no-repeat;
+      width: 17px;
+      height: 14px;
+      position: absolute;
+      bottom:-42px;
+      left:49%;
+    }
+  }
+}
+.big-list{
+  background: url('../images/snakes3.png') right bottom  no-repeat;
+  .list-what{
+    li{
+      margin:0 0 20px;
+    }
+    p{
+      font-family: 'Proxima Nova';
+      span{
+        color: #6a7c0d;
+        font-weight: bold;
+      }
+    }
+  }
 }
 
 /********************************
