--- a/src/style/partials/sprite.scss
+++ b/src/style/partials/sprite.scss
@@ -11,33 +11,132 @@ $icon-home: x y offset_x offset_y width height total_width total_height image_pa
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet: width height image $spritesheet-sprites;
 */
+$lebl-1-name: 'lebl-1';
+$lebl-1-x: 148px;
+$lebl-1-y: 0px;
+$lebl-1-offset-x: -148px;
+$lebl-1-offset-y: 0px;
+$lebl-1-width: 158px;
+$lebl-1-height: 133px;
+$lebl-1-total-width: 622px;
+$lebl-1-total-height: 408px;
+$lebl-1-image: '../images/sprite.png';
+$lebl-1: (148px, 0px, -148px, 0px, 158px, 133px, 622px, 408px, '../images/sprite.png', 'lebl-1', );
+$lebl-2-name: 'lebl-2';
+$lebl-2-x: 0px;
+$lebl-2-y: 275px;
+$lebl-2-offset-x: 0px;
+$lebl-2-offset-y: -275px;
+$lebl-2-width: 158px;
+$lebl-2-height: 133px;
+$lebl-2-total-width: 622px;
+$lebl-2-total-height: 408px;
+$lebl-2-image: '../images/sprite.png';
+$lebl-2: (0px, 275px, 0px, -275px, 158px, 133px, 622px, 408px, '../images/sprite.png', 'lebl-2', );
+$lebl-3-name: 'lebl-3';
+$lebl-3-x: 0px;
+$lebl-3-y: 142px;
+$lebl-3-offset-x: 0px;
+$lebl-3-offset-y: -142px;
+$lebl-3-width: 158px;
+$lebl-3-height: 133px;
+$lebl-3-total-width: 622px;
+$lebl-3-total-height: 408px;
+$lebl-3-image: '../images/sprite.png';
+$lebl-3: (0px, 142px, 0px, -142px, 158px, 133px, 622px, 408px, '../images/sprite.png', 'lebl-3', );
+$lebl-4-name: 'lebl-4';
+$lebl-4-x: 306px;
+$lebl-4-y: 0px;
+$lebl-4-offset-x: -306px;
+$lebl-4-offset-y: 0px;
+$lebl-4-width: 158px;
+$lebl-4-height: 133px;
+$lebl-4-total-width: 622px;
+$lebl-4-total-height: 408px;
+$lebl-4-image: '../images/sprite.png';
+$lebl-4: (306px, 0px, -306px, 0px, 158px, 133px, 622px, 408px, '../images/sprite.png', 'lebl-4', );
+$lebl-5-name: 'lebl-5';
+$lebl-5-x: 306px;
+$lebl-5-y: 133px;
+$lebl-5-offset-x: -306px;
+$lebl-5-offset-y: -133px;
+$lebl-5-width: 158px;
+$lebl-5-height: 133px;
+$lebl-5-total-width: 622px;
+$lebl-5-total-height: 408px;
+$lebl-5-image: '../images/sprite.png';
+$lebl-5: (306px, 133px, -306px, -133px, 158px, 133px, 622px, 408px, '../images/sprite.png', 'lebl-5', );
+$lebl-6-name: 'lebl-6';
+$lebl-6-x: 464px;
+$lebl-6-y: 0px;
+$lebl-6-offset-x: -464px;
+$lebl-6-offset-y: 0px;
+$lebl-6-width: 158px;
+$lebl-6-height: 133px;
+$lebl-6-total-width: 622px;
+$lebl-6-total-height: 408px;
+$lebl-6-image: '../images/sprite.png';
+$lebl-6: (464px, 0px, -464px, 0px, 158px, 133px, 622px, 408px, '../images/sprite.png', 'lebl-6', );
+$lebl-7-name: 'lebl-7';
+$lebl-7-x: 158px;
+$lebl-7-y: 275px;
+$lebl-7-offset-x: -158px;
+$lebl-7-offset-y: -275px;
+$lebl-7-width: 158px;
+$lebl-7-height: 133px;
+$lebl-7-total-width: 622px;
+$lebl-7-total-height: 408px;
+$lebl-7-image: '../images/sprite.png';
+$lebl-7: (158px, 275px, -158px, -275px, 158px, 133px, 622px, 408px, '../images/sprite.png', 'lebl-7', );
 $list-name: 'list';
-$list-x: 0px;
-$list-y: 0px;
-$list-offset-x: 0px;
-$list-offset-y: 0px;
+$list-x: 464px;
+$list-y: 133px;
+$list-offset-x: -464px;
+$list-offset-y: -133px;
 $list-width: 50px;
 $list-height: 50px;
-$list-total-width: 100px;
-$list-total-height: 50px;
+$list-total-width: 622px;
+$list-total-height: 408px;
 $list-image: '../images/sprite.png';
-$list: (0px, 0px, 0px, 0px, 50px, 50px, 100px, 50px, '../images/sprite.png', 'list', );
+$list: (464px, 133px, -464px, -133px, 50px, 50px, 622px, 408px, '../images/sprite.png', 'list', );
+$numer-two-name: 'numer-two';
+$numer-two-x: 514px;
+$numer-two-y: 133px;
+$numer-two-offset-x: -514px;
+$numer-two-offset-y: -133px;
+$numer-two-width: 50px;
+$numer-two-height: 50px;
+$numer-two-total-width: 622px;
+$numer-two-total-height: 408px;
+$numer-two-image: '../images/sprite.png';
+$numer-two: (514px, 133px, -514px, -133px, 50px, 50px, 622px, 408px, '../images/sprite.png', 'numer-two', );
 $numer-name: 'numer';
-$numer-x: 50px;
-$numer-y: 0px;
-$numer-offset-x: -50px;
-$numer-offset-y: 0px;
+$numer-x: 564px;
+$numer-y: 133px;
+$numer-offset-x: -564px;
+$numer-offset-y: -133px;
 $numer-width: 50px;
 $numer-height: 50px;
-$numer-total-width: 100px;
-$numer-total-height: 50px;
+$numer-total-width: 622px;
+$numer-total-height: 408px;
 $numer-image: '../images/sprite.png';
-$numer: (50px, 0px, -50px, 0px, 50px, 50px, 100px, 50px, '../images/sprite.png', 'numer', );
-$spritesheet-width: 100px;
-$spritesheet-height: 50px;
+$numer: (564px, 133px, -564px, -133px, 50px, 50px, 622px, 408px, '../images/sprite.png', 'numer', );
+$plachka-name: 'plachka';
+$plachka-x: 0px;
+$plachka-y: 0px;
+$plachka-offset-x: 0px;
+$plachka-offset-y: 0px;
+$plachka-width: 148px;
+$plachka-height: 142px;
+$plachka-total-width: 622px;
+$plachka-total-height: 408px;
+$plachka-image: '../images/sprite.png';
+$plachka: (0px, 0px, 0px, 0px, 148px, 142px, 622px, 408px, '../images/sprite.png', 'plachka', );
+$spritesheet-width: 622px;
+$spritesheet-height: 408px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($list, $numer, );
-$spritesheet: (100px, 50px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($lebl-1, $lebl-2, $lebl-3, $lebl-4, $lebl-5, $lebl-6, $lebl-7, $list, $numer-two, $numer, $plachka, );
+$spritesheet: (622px, 408px, '../images/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
